--- a/src/main.tex
+++ b/src/main.tex
@@ -373,31 +373,45 @@
 \newpage
 \makethirdsidebar
 
-
+\vspace*{-2em} % Adjust the value as needed
 \begin{cvtable}
     \cvitemRight{Jan,\\2014\\–\\Jul,\\2014}
     {BackboneJS + ThreeJS Front-End Developer}
     {Cisco, Paris (FR)}
     {
       \textbf{Project}: HTML5 app for Belgacom on RDK middleware.\\
-      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, and AJAX in BackboneJS; integrated 3D content using Three.JS with animations via Tween.JS; optimized for iOS/Android tablets using Hammer.JS for touch events.\\
-      \textbf{Challenges}: Used PhoneGap and CocoonJS for cross-platform packaging, optimizing performance on low-end STBs lacking WebGL.\\
-      \textbf{Outcome}: Delivered a high-performance POC with HW acceleration.\\
+      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, AJAX, and Three.JS in BackboneJS; optimized for tablets with Hammer.JS for touch events.\\
+      Packaged via PhoneGap, optimized for low-end STBs without WebGL.\\
+      \textbf{Outcome}: Delivered high-performance POC with HW acceleration.\\
     }
 \end{cvtable}
+
 
 
 
 \begin{cvtable}
     \cvitemRight{Mar,\\2013\\–\\Jan,\\2014}
     {CSS3D + HTML5/JS Front-End Developer}
-    {France}
+    {NDS Technologies, Paris}
     {
-      \textbf{Project}: Developed HTML5, CSS3D applications for embedded devices, showcased at CES 2014.\\
+      \textbf{Project}: Advanced HTML5 development for embedded devices in digital TV (smart TVs, HDMI sticks).\\
       \textbf{Responsibilities}:
           Built features for devices including LG TVs, HDMI sticks, and tablets using HTML, CSS3D, and WebGL, with BackboneJS for MVC and ThreeJS for 3D modeling.
           Optimized performance via hardware acceleration tests across engines (QT5/Webkit, WebKitNix, Chromium). Managed cross-compilation for platforms like LG TV, Raspberry Pi, and MacOSX.\\
-      \textbf{Outcome}: Delivered a high-performance solution, gaining interest from Belgacom and Zon TV.\\
+      \textbf{Outcome}: High-performance solution, attracting Belgacom and Zon TV.\\
+    }
+\end{cvtable}
+
+
+\begin{cvtable}
+    \cvitemRight{Aug,\\2012\\–\\Feb,\\2013}
+    {AngularJS | BackboneJS Front-End Developer}
+    {Cisco (ex NDS), FR}
+    {
+      \textbf{Project}: HTML5 software solution for digital TV with patented remote UI and second-screen functionality.\\
+      \textbf{Responsibilities}:
+          Contributed to a patented HTML5 rendering solution for payTV, showcased at IBC. Assessed frameworks (Angular, Backbone, Spine) for HTML5 EPG on STB, finalizing Backbone. Built MVC architecture for set-top box apps and explored FLASH-to-HTML5 tools like Adobe Edge.\\
+      \textbf{Skills}: HTML5 Development, Framework Evaluation, MVC Architecture, Open-Source Tools (GIT, Jira, Jenkins)\\
     }
 \end{cvtable}
 
@@ -407,37 +421,38 @@
     {WebKit / QT Developer (Full Stack)}
     {NDS Technologies, Paris, France}
     {
-      \textbf{Project}: Full-stack development for QT / WebKit integration on specialized chipsets.\\
+      \textbf{Project}: Comprehensive full-stack development for QT / WebKit integration on specialized chipsets, with a focus on performance and compatibility.\\
       \textbf{Responsibilities}:
-          Ported and cross-compiled QT / WebKit to target chipsets. Built Java-QT bridges for WebView control, integrating QWebView and Android WebView. Distributed binaries globally via shell scripting (India, Israel). Packaged HTML5 content as .CRX archives for a Cisco France app store.\\
-      \textbf{Skills}: Programming, Cross-Compiling, Java-QT Integration, Global Distribution, App Packaging\\
+          Cross-compiled QT / WebKit for various chipsets. Created Java-QT bridges for WebView control (QWebView and Android WebView). Automated binary distribution with shell scripting (India, Israel). Packaged HTML5 content as .CRX archives for Cisco France’s app store.\\
+      \textbf{Skills}: Advanced Programming, Efficient Cross-Compiling, Java-QT Integration, Global Distribution Automation, Secure App Packaging\\
     }
 \end{cvtable}
 \\
 \begin{cvtable}
     \cvitemRight{Nov,\\2006\\–\\Nov,\\2010}
     {Web Engine Integration}
-    {Canal +, Paris}
+    {Canal+, Paris (FR)}
     {
-      \textbf{Project}: Integration of the NetFront web engine, coordinating efforts across international teams for seamless deployment.\\
+      \textbf{Project}: Integrated NetFront web engine with global team coordination.\\
       \textbf{Responsibilities}:
-          Led NDS/ACCESS collaborations for middleware integration, managing full-stack dev from standards implementation to cross-platform porting (WIN32, LINUX, chipsets).
-          Supervised internships, POCs, including proprietary widget banks and STB-to-iPhone mobile integrations.\\
-      \textbf{Skills}: Web Techs, Project Management, X-Departmental Communication\\
+          Led NDS/ACCESS collaboration on middleware integration, managing full-stack development and cross-platform porting; supervised internships, POCs, and widget bank for STB-to-iPhone integration.\\
+      \textbf{Skills}: Web Technologies, Project Management, X-Dept. Communication\\
     }
 \end{cvtable}
+
 
 
 \begin{cvtable}
     \cvitemRight{Feb,\\2002\\–\\Oct,\\2006}
     {Full-Stack Browser Integration}
-    {Canal+,  Paris (FR)}
+    {Canal+, Paris (FR)}
     {
-      \textbf{Project}: Integration of Opera 6 for Canal+ Technologies.\\
+      \textbf{Project}: Integrated Opera 6 into Canal+ Technologies.\\
       \textbf{Responsibilities}:
-          Spearheaded integration and customization of Opera 6 for Canal+ Technologies, with support for JavaScript 1.3, CSS 2, and Netscape plugins. Led Java-Opera bridge development for advanced multimedia handling and client-specific plugins. Led online game implementations on STB, setting early HTML standards.\\
-      \textbf{Skills}: Advanced Web Engine Integration, Cross-Platform Porting, Custom Client-Specific Customization, Multimedia and Game Content Integration.\\
+          Led Opera 6 integration with JavaScript 1.3, CSS 2, and Netscape plugins. Built Java-Opera bridges for multimedia and custom plugins. Managed STB games, setting HTML standards.\\
+      \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration.\\
     }
+
     \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
     {Pay-TV System Integrator}
     {Canal+,  Paris (FR)}
@@ -453,14 +468,13 @@
     {DSP Engineer: AEC for Mobiles}
     {ALTEN, Issy Les Moulineaux (FR)}
     {
-      \textbf{Project}: Acoustic Echo Cancellation (AEC) development for improving audio clarity in mobile handsets and speakerphone environments.\\
+      \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity in mobile devices.\\
       \textbf{Responsibilities}:
-          Developed and finely tuned AEC algorithms for effective echo suppression, advanced noise reduction, and improved speech quality. Created a Windows executable in Visual C++ to simulate hands-free calls and conduct testing in both real-world and controlled environments.\\
-      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Algorithm Tuning.
+          Tuned AEC algorithms for echo suppression, noise reduction, and speech quality. Built a Visual C++ executable for hands-free call simulation and testing in varied environments.\\
+      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Tuning.
     }
-
-
 \end{cvtable}
+
 
 
 \end{document}
