--- a/src/main.tex
+++ b/src/main.tex
@@ -101,7 +101,7 @@
       \pointskillNinety{}{HTML (HTML 5), CSS (3D)}
       \pointskillEighty{}{PHP (v7 et v5)}
       \pointskillSeventy{}{Python (v2 et v3)}
-      \pointskillSixty{}{C\# (.NET Framework, Mono)}
+      \pointskillSixty{}{C\# (.NET, Mono)}
       \pointskillFifty{}{Java (Fx, Swing, Maven)}
       \pointskillFifty{}{Matlab}
       \pointskillForty{}{QT (4 and 5)}
@@ -305,65 +305,67 @@
 
 
 \begin{cvtable}
-    \cvitemRight{Jan,\\2017\\–\\Aug,\\2017}
-    {Full stack coder}
-    {Alayacare, Montreal}
+    \cvitemRight{Jan,\\2017\\–\\June,\\2017}
+    {Full Stack Developer in Healthcare Sector}
+    {AlayaCare, Montreal}
     {
-      \textbf{Role}: Development of web features for healthcare applications focusing on front-end and back-end integrations.\\
-      * \textbf{Front-end}: Developed pure VUE.js components and a custom time-entry component, leveraging technologies such as super-agent, moment.js, simple-vue-validator, and LESS for enhanced CSS management. \\
-      * \textbf{Back-end}: Engineered solutions using PHP 5 with YII Framework and PYTHON for RESTful micro-services, including unit testing and API documentation updates via APIARY. \\
-      * \textbf{Mobile and Process Agility}: Performed intensive code reviews for Android and adhered to agile methodologies with three-week sprint cycles, managing tasks through Jira and documentation via Confluence.\\
-      * \textbf{Virtualization}: Utilized Docker for encapsulating micro-services and software components, enhancing deployment efficiency and isolation.\\
+      \textbf{Role}: Developed web functionalities for healthcare platforms, focusing on both front-end and back-end.\\
+      * \textbf{Front-end}: Created VUE.js components without jQuery, using libraries such as super-agent for AJAX requests, moment.js for date formatting, simple-vue-validator for validation, and LESS for optimized CSS. Built a custom time-entry component based on jquery.timeentry outside of VUE.js.\\
+      * \textbf{Back-end}: Implemented PHP 5 solutions within the YII Framework, integrating the Carbon extension for date management, along with Python micro-services using SqlAlchemy. Ensured quality with unit tests and maintained REST API documentation via APIARY.\\
+      * \textbf{Mobile and Process Agility}: Conducted detailed Android code reviews and operated within a three-week sprint cycle, actively participating in standups, demos, retros, and grooming. Managed tasks and backlogs through Jira, with documentation centralized in Confluence.\\
+      * \textbf{Virtualization}: Deployed each micro-service and software component in Docker containers, facilitating isolated, efficient deployment.\\
     }
 \end{cvtable}
+
 
 
 
 \begin{cvtable}
     \cvitemRight{May,\\2015\\–\\Dec,\\2016}
-    {Front-End Developer}
-    {Abbeal, Canal+,  Paris (FR)}
+    {Front-End Developer in the Digital TV Sector}
+    {Abbeal for Canal+, FR}
     {
-      \textbf{Role}: Development and maintenance of WebApp interfaces for digital TV receivers (STB) across various platforms including TNT, SATELLITE, and IPTV, reaching millions of subscribers.\\
-      * \textbf{Front-End}: Managed with WEBPACK, featuring HTML/JS/CSS execution in a Qt/webkit instance on a Linux system. Utilized ES2015 standards with Babel transpilation, GRUNT build management, and NODE.js.\\
-      * \textbf{Server-Side}: Operated with UWSGI in Python, hosting the WebApp and handling URL routing via the DBUS interface.\\
-      \textbf{Frameworks and Libraries}: Transitioned from BACKBONE to ANGULAR for MVC approaches, used LODASH for data manipulation, EASELJS from CREATEJS suite for canvas operations, and EJS for templating.\\
-      \textbf{Testing and Agile Practices}: Conducted unit testing using MOCHA, SPY, SINON; followed agile methodologies with daily standups, grooming sessions, managed tasks and documentation through JIRA and CONFLUENCE. Sources maintained on GitHub.\\
-      \textbf{Deployment Achievements}: Successfully deployed to 400,000 TNT receivers and expanded to 2 million SAT receivers.\\
-      \textbf{Special Project}: Led the Nightwatch project, a Selenium-centric task-force, to develop UI navigation scenarios, capture and playback network exchanges with REST APIs, managed remotely on AWS EC2 via Docker.\\
+      \textbf{Role}: Developed and maintained WebApp interfaces for Canal+ digital TV receivers, reaching millions of subscribers on TNT, SATELLITE, and IPTV platforms.\\
+      * \textbf{Front-End}: Built with HTML, JavaScript, and CSS, managed by WEBPACK, and executed in a Qt/WebKit instance on a Linux system. Used ES2015 standards via Babel, with build processes managed by GRUNT and NODE.js.\\
+      * \textbf{Server-Side}: Supported by a Python UWSGI server hosting the WebApp and managing routing through DBUS for system interactions.\\
+      * \textbf{Libraries and Frameworks}: Transitioned from BACKBONE to ANGULAR for MVC structure; used LODASH for data handling, EASELJS for canvas interactions, and EJS for templating.\\
+      * \textbf{Agile and Testing}: Conducted unit tests with MOCHA, SPY, and SINON. Operated in agile sprints with task tracking on JIRA and documentation in CONFLUENCE.\\
+      * \textbf{Deployment}: Successfully deployed to 400,000 TNT receivers, later expanding to 2 million SAT receivers.\\
+      * \textbf{Nightwatch Project}: Led a Selenium-based initiative for UI navigation testing and REST API simulation, executed remotely on AWS EC2 with Docker.\\
     }
 \end{cvtable}
+
 
 
 
 \begin{cvtable}
     \cvitemRight{Dec,\\2014\\–\\Apr,\\2015}
     {Android + NodeJS Developer for IoT}
-    {Cisco,  Paris (FR)}
+    {Cisco, Paris (FR)}
     {
-      \textbf{Project}: ConnectedLife - Integrated IoT with TV experiences.\\
-      * \textbf{Technologies}: Utilized openHAB for IoT ecosystem management, implementing localization with Bluetooth (iBeacons), WiFi, and RFID. Developed a playlist system for delinearized TV based on user analytics, incorporating dynamic ad insertion.\\
-      * \textbf{Ambilight \& UI}: Created real-time ambilight effects using GStreamer and Philips Hue via Zigbee. Initiated UI/UX in Dart/WebGL, transitioned to HTML/CSS with Cisco’s JUNO.\\
-      * \textbf{Companion Apps}: Crafted apps for wearables and mobiles in Java, enhancing connectivity with WebSocket and Node.js servers.\\
-      * \textbf{Achievements}: Showcased at CES 2015, featured at Mobile World Congress, and won "Best IoT Product" award by CSI Magazine.\\
+      \textbf{Project}: ConnectedLife - Integrated IoT into TV experiences for home automation.\\
+      * \textbf{Technologies}: Leveraged openHAB to orchestrate IoT, employing Bluetooth (iBeacons), WiFi triangulation (Cisco MSE/Prime), and RFID (Impinj) for localization. Developed a delinearized TV channel experience with personalized playlists and targeted ad insertion based on Cisco analytics.\\
+      * \textbf{Ambilight \& UI}: Designed real-time ambilight effects by processing TV frames with GStreamer to match room lighting (Philips Hue) through Zigbee. Initiated UI in Dart/WebGL and transitioned to HTML/CSS using Cisco’s proprietary JUNO framework.\\
+      * \textbf{Companion Apps}: Built companion apps for wearables and Samsung mobiles in Java, ensuring real-time connectivity through WebSocket and dedicated Node.js servers.\\
+      * \textbf{Achievements}: Demonstrated at CES 2015, featured at Mobile World Congress, and awarded "Best IoT Product" by CSI Magazine.\\
     }
 \end{cvtable}
+
 
 
 
 \begin{cvtable}
     \cvitemRight{Aug,\\2014\\–\\Dec,\\2014}
     {HTML5/JS Front-End Developer}
-    {Cisco,  Paris (FR)}
+    {Cisco, Paris (FR)}
     {
-      \textbf{Project}: Development of a WebApp for ZON TV Portugal.\\
-        Led the design and implementation using Vanilla JS, CSS3, and HTML5, creating a custom UI manager for MVC view arrangement.
-        Developed essential components such as channel lists, channel banners, and EPG grids.
-        Managed continuous integration with Grunt and Jenkins, oversaw agile processes, and maintained project oversight via JIRA.\\
-      \textbf{Outcome}:
-        Delivered a fully functional proof of concept that enhanced STB interaction with backend systems, significantly improving user experience.
+      \textbf{Project}: Proof of concept WebApp for ZON TV Portugal.\\
+      * \textbf{Technologies}: Developed using Vanilla JS, CSS3, and HTML5, with a custom UI manager to structure MVC views without a framework. Built core components such as the channel list, channel banner, and EPG grid.\\
+      * \textbf{Integration and Workflow}: Utilized QT on RDK middleware for optimized STB-to-backend data handling. Employed Grunt (Node) and Jenkins for continuous integration, managing tasks through JIRA, and collaborating in scrum sessions.\\
+      * \textbf{Outcome}: Successfully delivered a high-performance WebApp that improved interaction between STB and ZON TV backend, showcased as a proof of concept.
     }
 \end{cvtable}
+
 
 
 
@@ -380,7 +382,7 @@
     {Cisco, Paris (FR)}
     {
       \textbf{Project}: HTML5 app for Belgacom on RDK middleware.\\
-      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, AJAX, and Three.JS in BackboneJS; optimized for tablets with Hammer.JS for touch events.\\
+      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, AJAX, and Three.JS in BackboneJS; optimized for tablets with Hammer.JS for touch events.
       Packaged via PhoneGap, optimized for low-end STBs without WebGL.\\
       \textbf{Outcome}: Delivered high-performance POC with HW acceleration.\\
     }
