--- a/src/main.tex
+++ b/src/main.tex
@@ -96,7 +96,7 @@
 	\graphicspath{{pics/flags/}}
 
 	\profilesection{Skills}
-    \chartlabel{Programmatic languages:}\\
+    \chartlabel{Programmatic languages}\\
       \pointskillNinety{}{TypeScript, JavaScript}
       \pointskillNinety{}{HTML (HTML 5), CSS (3D)}
       \pointskillEighty{}{PHP (v7 et v5)}
@@ -105,7 +105,7 @@
       \pointskillFifty{}{Java (Fx, Swing, Maven)}
       \pointskillFifty{}{Matlab}
       \pointskillForty{}{QT (4 and 5)}
-    \chartlabel{Front-end (web):}\\
+    \chartlabel{Front-end (web)}\\
       \pointskillNinety{}{Angular (9/10/14)}
       \pointskillEighty{}{jQuery}
       \pointskillSeventy{}{React}
@@ -116,7 +116,7 @@
       \pointskillFifty{}{VueJS}
       \pointskillForty{}{ThreeJS (3D)}
       \pointskillThirty{}{LaTeX (Typesetting)}
-    \chartlabel{Back-end:}\\
+    \chartlabel{Back-end}\\
       \pointskillNinety{}{OpenAPI/Swagger (TSOA)}
       \pointskillSeventy{}{Express (Node.js)}
       \pointskillSixty{}{Microservices (in Python)}
@@ -124,7 +124,7 @@
       \pointskillThirty{}{Django (Python framework)}
       \pointskillThirty{}{Elixir (Robust scalability)}
       \pointskillThirty{}{Knex (Postgres, SQLite)}
-    \chartlabel{Database:}\\
+    \chartlabel{Database}\\
       \pointskillNinety{}{DynamoDB / (MongoDB)}
       \pointskillEighty{}{ElasticSearch}
       \pointskillSeventy{}{PostGres, Sqlite, MySql}
@@ -140,7 +140,7 @@
 %-------------------------------------------------------------------------------
 \addtobacksidebar{
 \vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
-\chartlabel{AWS Cloud:}\\
+\chartlabel{AWS Cloud}\\
 \pointskillNinety{}{EC2, S3, CloudWatch}
 \pointskillNinety{}{Lambdas (layer)}
 \pointskillNinety{}{Secrets Manager}
@@ -152,52 +152,52 @@
 \pointskillEighty{}{Route53 (DNS)}
 \pointskillEighty{}{Certificates (ACM)}
 
-\chartlabel{Azure Cloud:}\\
+\chartlabel{Azure Cloud}\\
 \pointskillForty{}{Text To Speech Service}
 
-\chartlabel{DevOps:}\\
+\chartlabel{DevOps}\\
 \pointskillEighty{}{Terraform (IaC Multi-Cloud)}
 \pointskillSeventy{}{Kubernetes (Orchestration)}
 \pointskillFifty{}{CloudFormation (IaC AWS)}
 
-\chartlabel{HTML5 players:}\\
+\chartlabel{HTML5 players}\\
 \pointskillNinety{}{Bitmovin}
 \pointskillNinety{}{Accurate Player (Codemill)}
 \pointskillSeventy{}{Video.js (open source)}
 
-\chartlabel{Multimedia:}\\
+\chartlabel{Multimedia}\\
 \pointskillNinety{}{FFMPEG, mediainfo}
 \pointskillNinety{}{AWS MediaConvert}
 \pointskillSeventy{}{Hybrik (Dolby)}
 
-\chartlabel{Mobile Development:}\\
+\chartlabel{Mobile Development}\\
 \pointskillSixty{}{Java Android (Dalvik)}
 \pointskillForty{}{Ionic (Apache Cordova)}
 \pointskillThirty{}{Xcode (Objective C)}
 
 
-\chartlabel{Version Control Systems:}\\
+\chartlabel{Version Control Systems}\\
 \pointskillEighty{}{Git (gitlab, github)}
 \pointskillForty{}{SVN / Synergy}
 
-\chartlabel{Operating Systems:}\\
+\chartlabel{Operating Systems}\\
 \pointskillEighty{}{Linux (Ubuntu 22)}
 \pointskillSeventy{}{Windows (Win 10)}
 \pointskillFifty{}{Mac (El Capitan 10.11.2)}
 
-\chartlabel{IDE:}\\
-\pointskillNinety{}{Webstorm (Jetbrains)}
+\chartlabel{IDE}\\
+\pointskillEighty{}{Webstorm (Jetbrains)}
 \pointskillEighty{}{Visual Code Editor}
 \pointskillSeventy{}{Vim / Vi}
 
 
-\chartlabel{Agility:}\\
+\chartlabel{Agility}\\
 \pointskillEighty{}{Jira (backlog, sprint)}
 \pointskillEighty{}{Confluence / wiki}
 \pointskillEighty{}{Scrum (grooming, review)}
 
 
-\chartlabel{Scripting:}\\
+\chartlabel{Scripting}\\
 \pointskillEighty{}{Bash, shell (Linux, Mac)}
 \pointskillSeventy{}{CMD prompt, Powershell}
 }
@@ -205,13 +205,17 @@
 \addtothirdsidebar{
 \vspace*{-9mm}  % Adjusts the vertical space, move content up by 10mm
 
-  \chartlabel{Instant messaging:}\\
+  \chartlabel{Streaming, encryption}\\
+  \pointskillEighty{}{MPEG/DASH, Widevine}
+  \pointskillEighty{}{HLS, AES-128}
+
+  \chartlabel{Instant messaging}\\
   \pointskillEighty{}{Teams, Slack}
 
-  \chartlabel{UX / UI:}\\
+  \chartlabel{UX / UI}\\
   \pointskillSeventy{}{Figma, Miro}
 
-  \chartlabel{AI:}\\
+  \chartlabel{AI}\\
   \pointskillEighty{}{Chatgpt 4.0}
   \pointskillSixty{}{OpenAI API}
 
@@ -242,7 +246,9 @@
 
 	\profilesection{Short Bio}
 	\aboutme{
-    With more than 26 years of experience in web development for digital TV, media platforms, and mobile devices, I spearheaded the architecture, development, and deployment of multiple projects. My leadership focused on improving our software stack through module creation, code reviews, and the adoption of agile practices. Dedicated to crafting user-friendly and scalable solutions leveraging technologies such as AWS, Angular, Vue.js, React, PHP, Python, HTML5, AI.}\\
+    With 26+ years in web development, I have led multiple projects across digital TV and media platforms, enhancing our software stack with agile practices and technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI
+    }\\
+
 }
 %-------------------------------------------------------------------------------
 %                         TABLE ENTRIES RIGHT COLUMN
@@ -273,23 +279,28 @@
 
 \begin{cvtable}
     \cvitemRight{Sep,\\2017\\–\\Jan,\\2020}
-    {Full stack key player}
+    {Full-Stack coder for Media Asset Management}
     {LVL Studio, Montreal}
     {
-      \textbf{Role}: Participated in building a new software stack for our client recently named Difuze, formerly Technicolor Montreal. Involved in architecture decisions, contributed to module development, component creation, including code reviews through GitLab, proactively following the backlog across Jira, arranging/creating/prioritizing tickets, and writing documentation over Confluence.\\
-      \textbf{Context}: B2B with www.difuze.com as the customer, www.difuzego.com as the main product.\\
-      \textbf{Purpose}: Media Asset Management, screeners (promotional video links), delivery (orders)\\
-      \textbf{Tech Areas}: Expertise in Front-end and Back-end development, tasks scheduling (cron jobs), and partially in DevOps.\\
-      \textbf{Front-end}: Worked with frameworks and libraries such as Angular 2 (version 7.2.9), RxJS (Observables), Angular Material. Modules including ngx-translate, fortawesome, ipfy, ipstack, ngx-charts, angulartics2, bitmovin player and UI, bowser, fs-symlink, hammerjs, i18n-iso-countries, merge-ranges, moment, ng2-file-upload, ngx-device-detector, ngx-perfect-scrollbar, lodash.merge, rxjs, rxjs-compat, socket.io-client.\\
-      \textbf{Back-end}: RESTful web services with OpenAPI, architecture with TypeScript Oriented Architecture (tsoa), modules like exceljs, mailcomposer, moment-timezone, mustache, request, restify, socket.io, user-agent, winston, csv-generate, fs-extra, easy-zip, rapid-api sms, git-repo-info, jasmine, aws-sdk. Asynchronism with Promise and async/await.\\
+      \textbf{Role}: Key contributor to a new software stack for Difuze (formerly Technicolor Montreal),
+      including architecture decisions, module development, and component creation.
+      Engaged in proactive backlog management through Jira and performed code reviews
+      via GitLab with comprehensive documentation in Confluence.\\
+      \textbf{Context}: B2B client with www.difuze.com as the customer and www.difuzego.com as the main product.\\
+      \textbf{Purpose}: Development of media asset management and delivery solutions, including screeners and video delivery.\\
+      \textbf{Tech Areas}: Front-end, Back-end, DevOps (partial), task scheduling (cron jobs).\\
+      \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, ngx-translate, moment, ng2-file-upload, bitmovin, fs-symlink, hammerjs, and ngx-perfect-scrollbar.\\
+      \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and libraries like exceljs, fs-extra, mustache, and socket.io; asynchronous handling with async/await.\\
       \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.\\
-      \textbf{Database and Search Engines}: Managed both new and legacy stacks with technologies like DynamoDb, ElasticSearch, and MySQLWorkbench for stored procedures.\\
-      \textbf{AWS DevOps}: Experience with AWS technologies including ElasticBeanStalk, EC2, Lambda, CloudWatch, IAM, aws-cli.\\
-      \textbf{Operating Systems}: Ubuntu 18.04, Windows 7, Mac OS Sierra.\\
-      \textbf{IDEs}: Efficient with WebStorm, VS Code, and vim / vi.\\
-      \textbf{Additional Responsibilities}: Actively participated in maintaining the old stack developed in PHP, based on the YII framework, layered on MySQL as RDS database. Minor developments in C\#.
+      \textbf{Database and Search}: Managed both legacy (MySQL RDS) and new stack (DynamoDb, ElasticSearch).\\
+      \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, small Lambda, CloudWatch, IAM, ECR\\
+      \textbf{Operating Systems}: Ubuntu 18, Windows 10, MacOS.\\
+      \textbf{Operating Systems and IDEs}: WebStorm, VS Code.\\
+      \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments.
     }
 \end{cvtable}
+
+
 
 
 
@@ -437,8 +448,8 @@
     {
       \textbf{Project}: Integrated NetFront web engine with global team coordination.\\
       \textbf{Responsibilities}:
-          Led NDS/ACCESS collaboration on middleware integration, managing full-stack development and cross-platform porting; supervised internships, POCs, and widget bank for STB-to-iPhone integration.\\
-      \textbf{Skills}: Web Technologies, Project Management, X-Dept. Communication\\
+          Led NDS/ACCESS collaboration on middleware integration, managing full-stack development and X-platform porting; supervised internships, POCs, and widget bank for STB-to-iPhone integration.\\
+      \textbf{Skills}: Web Tech, Project Management, X-Dept. communication, C coding\\
     }
 \end{cvtable}
 
@@ -452,7 +463,7 @@
       \textbf{Project}: Integrated Opera 6 into Canal+ Technologies.\\
       \textbf{Responsibilities}:
           Led Opera 6 integration with JavaScript 1.3, CSS 2, and Netscape plugins. Built Java-Opera bridges for multimedia and custom plugins. Managed STB games, setting HTML standards.\\
-      \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration.\\
+      \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration. C++ programming\\
     }
 
     \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
